# personality_type_prediction

./: README.md  hello.py  pyproject.toml
app/: Dockerfile  app.py
notebooks/: Notebook_Version_Final.ipynb  Procesamiento_Datos_1.ipynb  Procesamiento_Datos_3_KNN.ipynb
